--- a/models/simplecontact/_name_col.htm
+++ b/models/simplecontact/_name_col.htm
@@ -1,5 +1,5 @@
-<? if($record->is_replied){ ?>
+<?php if($record->is_replied): ?>
 <i class="oc-icon-reply icon-muted"> <?= $value ?></i>
-<? }else{ ?>
+<?php else: ?>
 <?= $value ?>
-<? } ?>
+<?php endif ?>
